[tool.poetry]
name = "mario-adf"
version = "0.1.0"
description = ""
authors = ["jeffbrennan"]

[tool.poetry.dependencies]
python = "^3.11"
azure-core = "*"
azure-identity = "*"
azure-mgmt-datafactory = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
